Move tourist certificate to own form

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -13,10 +13,6 @@
   "certificateCreate.form.label.vaccine.totalDoses": "Doses requises",
   "certificateCreate.form.label.vaccine.dateOfVaccination": "Date de la vaccination",
   "certificateCreate.form.label.vaccine.countryOfVaccination": "Pays de la vaccination",
-  "certificateCreate.form.label.vaccine.certificateSelection": "<PLACEHOLDER>",
-  "certificateCreate.form.label.vaccine.regularCertificate": "<PLACEHOLDER>",
-  "certificateCreate.form.label.vaccine.touristCertificate": "<PLACEHOLDER>",
-  "certificateCreate.form.label.vaccine.touristCertificateInfo": "<PLACEHOLDER>",
   "certificateCreate.form.label.test.typeOfTest": "Type de test",
   "certificateCreate.form.label.test.manufacturerAndName": "Fabricant et Nom",
   "certificateCreate.form.label.test.sampleDate": "Date de l'échantillon",
@@ -50,6 +46,7 @@
   "certificateCreate.step-one.enum.test": "Test négatif",
   "certificateCreate.step-one.enum.recovery": "Guérison (PCR test positif)",
   "certificateCreate.step-one.enum.antibody": "Guérison (Test d'anticorps positif)",
+  "certificateCreate.step-one.enum.vaccination-tourist": "Certificat de tourisme (vaccin de l'OMS)",
   "certificateCreate.step-two.personaldata.information": "Les données personnelles doivent être identiques au document d'identité.",
   "certificateCreate.step-two.vaccinationinformation": "la vaccination n'est complète et le certificat n'est valide que si le nombre de doses reçues correspond au nombre de doses requises. Ex : guérison + vaccination : 1/1, vaccination avec deux doses : 2/2, rappel : 3/3.",
   "certificateCreate.step-two.nonissuablevaccineproductinformation": "<p style=\"text-align: justify;\">L'&eacute;tablissement des certificats de vaccination Covid ou des certificats de gu&eacute;rison Covid pour les personnes ayant &eacute;t&eacute; vaccin&eacute;es ou gu&eacute;rit &agrave; l'&eacute;tranger est r&eacute;serv&eacute; aux seuls bureaux sp&eacute;cifiquement d&eacute;sign&eacute;s par le canton. Veuillez confirmer que vous avez &eacute;t&eacute; autoris&eacute; par le canton &agrave; d&eacute;livrer ces certificats.</p><p style=\"text-align: justify;\">L'&eacute;mission des certificats pour vaccins qui figurent seulement sur la &laquo;<a href=\"https://www.who.int/teams/regulation-prequalification/eul\" target=\"_blank\">WHO Emergency Use Listing</a>&raquo; ne peuvent &ecirc;tre d&eacute;livr&eacute;s qu'aux personnes disposant d'un permis de s&eacute;jour valide ou aux citoyens suisses et ces certificats de vaccination Covid ne sont valables qu'en Suisse.</p>",
