--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -13,10 +13,6 @@
   "certificateCreate.form.label.vaccine.totalDoses": "Dosi necessarie",
   "certificateCreate.form.label.vaccine.dateOfVaccination": "Data della vaccinazione",
   "certificateCreate.form.label.vaccine.countryOfVaccination": "Paese di vaccinazione",
-  "certificateCreate.form.label.vaccine.certificateSelection": "<PLACEHOLDER>",
-  "certificateCreate.form.label.vaccine.regularCertificate": "<PLACEHOLDER>",
-  "certificateCreate.form.label.vaccine.touristCertificate": "<PLACEHOLDER>",
-  "certificateCreate.form.label.vaccine.touristCertificateInfo": "<PLACEHOLDER>",
   "certificateCreate.form.label.test.typeOfTest": "Tipo di test",
   "certificateCreate.form.label.test.manufacturerAndName": "Fabbricante e Nome",
   "certificateCreate.form.label.test.sampleDate": "Data del campione",
@@ -50,6 +46,7 @@
   "certificateCreate.step-one.enum.test": "Test negativo",
   "certificateCreate.step-one.enum.recovery": "Guarigione (PCR test positivo)",
   "certificateCreate.step-one.enum.antibody": "Guarigione (Test anticorpi positivo)",
+  "certificateCreate.step-one.enum.vaccination-tourist": "Certificato turistico (vaccino OMS)",
   "certificateCreate.step-two.personaldata.information": "I dati personali devono essere identici al documento d'identità.",
   "certificateCreate.step-two.vaccinationinformation": "la completezza della vaccinazione e di conseguenza la validità del certificato COVID è garantita soltanto se il numero di dosi ricevute corrisponde a quello delle dosi necessarie. P. es.: guarigione + vaccinazione: 1/1, vaccinazione con 2 dosi: 2/2, richiamo 3/3.",
   "certificateCreate.step-two.nonissuablevaccineproductinformation": "<p style=\"text-align: justify;\">L&rsquo;emissione di certificati di vaccinazione COVID-19 o di certificati di guarigione dalla COVID-19 per le persone vaccinate o guarite all&rsquo;estero &egrave; riservata soltanto ai servizi appositamente designati dal Cantone. Vogliate confermare di aver ottenuto l&rsquo;autorizzazione del Cantone per emettere questi certificati COVID-19.</p> <p style=\"text-align: justify;\">Per i vaccini autorizzati solo conformemente all &laquo;<a href=\"https://www.who.int/teams/regulation-prequalification/eul\" target=\"_blank\">WHO Emergency Use Listing</a>&raquo;, i certificati di vaccinazione COVID-19 vengono emessi soltanto per le persone con un permesso di soggiorno valido o per i cittadini svizzeri. Questi certificati di vaccinazione sono validi solo in Svizzera.</p>",
