--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,10 +13,6 @@
   "certificateCreate.form.label.vaccine.totalDoses": "Doses required",
   "certificateCreate.form.label.vaccine.dateOfVaccination": "Date of vaccination",
   "certificateCreate.form.label.vaccine.countryOfVaccination": "Country of vaccination",
-  "certificateCreate.form.label.vaccine.certificateSelection": "Type of Certificate",
-  "certificateCreate.form.label.vaccine.regularCertificate": "Regular",
-  "certificateCreate.form.label.vaccine.touristCertificate": "Tourist",
-  "certificateCreate.form.label.vaccine.touristCertificateInfo": "Special Certificate for Tourists. This Certificate is only valid for 30 days.",
   "certificateCreate.form.label.test.typeOfTest": "Test type",
   "certificateCreate.form.label.test.manufacturerAndName": "Manufacturer and Name",
   "certificateCreate.form.label.test.sampleDate": "Date of sampling",
@@ -50,6 +46,7 @@
   "certificateCreate.step-one.enum.test": "Negative test",
   "certificateCreate.step-one.enum.recovery": "Recovered (PCR test positive)",
   "certificateCreate.step-one.enum.antibody": "Recovered (Antibody test positive)",
+  "certificateCreate.step-one.enum.vaccination-tourist": "Tourist certificate (WHO vaccine)",
   "certificateCreate.step-two.personaldata.information": "The personal details must be identical to the identity document.",
   "certificateCreate.step-two.vaccinationinformation": "a person is only considered fully vaccinated and the associated COVID certificate is only valid if the number of doses received and the number of doses required is identical, e.g. recovery + vaccination: 1/1, vaccination with 2 doses: 2/2, booster 3/3",
   "certificateCreate.step-two.nonissuablevaccineproductinformation": "<p style=\"text-align: justify;\">The issuing of Covid vaccination certificates or Covid recovery certificates for persons who have been vaccinated or recovered abroad is reserved only for authorised issuers specifically designated by the canton. Please confirm that you have been authorised by the canton to issue these certificates.</p><p style=\"text-align: justify;\">The issuance of vaccines that are only authorised according to the &laquo;<a href=\"https://www.who.int/teams/regulation-prequalification/eul\" target=\"_blank\">WHO Emergency Use Listing</a>&raquo; is permitted only for persons with a valid residence permit or Swiss citizens. These Covid vaccination certificates are also only valid within Switzerland.</p> ",
