VACCINECERT-1628 added translations for error message

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -150,6 +150,8 @@
   "validation.error.http.482": "Le CSV n'a pas été traité en raison d'une taille non valide. Il doit contenir de 1 à 100 entrées.",
   "validation.error.http.485": "Une ou plusieurs des requêtes du CSV contiennent des données non valides. Pour des messages d'erreur plus détaillés, vérifiez le fichier CSV retourné.",
   "validation.error.http.489": "Date de naissance non valide. Veuillez vérifier votre saisie à l'étape 2.",
+  "validation.error.http.458": "Prénom invalide! Ne pas dépasser 80 signes ni saisir des caractères non valides.",
+  "validation.error.http.459": "Nom de famille invalide! Ne pas dépasser 80 signes ni saisir des caractères non valides.",
   "notifications.unsupportedBrowser.title": "Navigateur non supporté",
   "notifications.unsupportedBrowser.message": "Certaines fonctions de cette application ne sont pas prises en charge par votre navigateur. Veuillez noter que seules les 2 dernières versions de Chrome, de Firefox, d’Edge et de Safari sont prises en charge."
 }
