--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -124,7 +124,7 @@
   "i18n.validation.matDatepickerParse": "Formato di data non valido, utilizzare \"dd.mm.yyyy hh:mm\"",
   "i18n.validation.invalidShortDate": "Formato di data non valido, utilizzare \"jjjj\" o \"jjjj-mm\"",
   "i18n.validation.notIssuableInSwitzerland": "[it]Ausgewählter Impfstoff ist in der Schweiz nicht zugelassen.",
-  "i18n.validation.dateBeforeAntibodyCertificateMinDate": "[it]Date of sample collection must not be before 16.11.2021.",
+  "i18n.validation.dateBeforeAntibodyCertificateMinDate": "La data del prelievo non può essere anteriore al 16.11.2021.",
   "logout": "Logout",
   "otp.button.copy": "Copia negli appunti",
   "otp.button.create": "Crea chiave segreta",
