VACCINECERT-1655 added translations for validation message

--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -123,7 +123,7 @@
   "i18n.validation.timeAfterToday": "La data non deve essere nel futuro",
   "i18n.validation.matDatepickerParse": "Formato di data non valido, utilizzare \"dd.mm.yyyy hh:mm\"",
   "i18n.validation.invalidShortDate": "Formato di data non valido, utilizzare \"jjjj\" o \"jjjj-mm\"",
-  "i18n.validation.notIssuableInSwitzerland": "[it]Ausgewählter Impfstoff ist in der Schweiz nicht zugelassen.",
+  "i18n.validation.notIssuableInSwitzerland": "Il vaccino selezionato non è autorizzato in Svizzera.",
   "i18n.validation.dateBeforeAntibodyCertificateMinDate": "La data del prelievo non può essere anteriore al 16.11.2021.",
   "logout": "Logout",
   "otp.button.copy": "Copia negli appunti",
