--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -47,6 +47,7 @@
   "certificateCreate.step-one.enum.recovery": "Genesen (PCR-Test positiv)",
   "certificateCreate.step-one.enum.antibody": "Genesen (Antikörper-Test positiv)",
   "certificateCreate.step-one.enum.vaccination-tourist": "Touristenzertifikat (WHO-Impfstoff)",
+  "certificateCreate.step-one.enum.chOnly": "Schweizer Zertifikate",
   "certificateCreate.step-two.personaldata.information": "Die Personalien müssen mit dem Ausweisdokument identisch sein.",
   "certificateCreate.step-two.vaccinationinformation": "Die Vollständigkeit der Impfung und die damit verbundene Gültigkeit des Covid-Zertifikats ist nur bei identischer Anzahl erhaltener und erforderlichen Dosen gewährleistet. Bsp.: Genesung + Impfung: 1/1, Impfung mit 2 Dosen: 2/2, Booster 3/3",
   "certificateCreate.step-two.entitledtoissueconfirmation": "<p style=\"text-align: justify;\">Die Ausstellung von Covid-Impfzertifikaten oder Covid-Genesenenzertifikaten f&uuml;r Personen die im Ausland geimpft oder genesen sind, ist nur speziell vom Kanton bezeichneten Stellen vorbehalten. Bitte best&auml;tigen Sie, dass Sie f&uuml;r diese Ausstellungen vom Kanton berechtigt wurden.</p>",
