--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -47,6 +47,7 @@
   "certificateCreate.step-one.enum.recovery": "Guérison (PCR test positif)",
   "certificateCreate.step-one.enum.antibody": "Guérison (Test d'anticorps positif)",
   "certificateCreate.step-one.enum.vaccination-tourist": "Certificat de tourisme (vaccin de l'OMS)",
+  "certificateCreate.step-one.enum.chOnly": "Certificats suisse",
   "certificateCreate.step-two.personaldata.information": "Les données personnelles doivent être identiques au document d'identité.",
   "certificateCreate.step-two.vaccinationinformation": "la vaccination n'est complète et le certificat n'est valide que si le nombre de doses reçues correspond au nombre de doses requises. Ex : guérison + vaccination : 1/1, vaccination avec deux doses : 2/2, rappel : 3/3.",
   "certificateCreate.step-two.entitledtoissueconfirmation": "<p style=\"text-align: justify;\">L'&eacute;tablissement des certificats de vaccination Covid ou des certificats de gu&eacute;rison Covid pour les personnes ayant &eacute;t&eacute; vaccin&eacute;es ou gu&eacute;rit &agrave; l'&eacute;tranger est r&eacute;serv&eacute; aux seuls bureaux sp&eacute;cifiquement d&eacute;sign&eacute;s par le canton. Veuillez confirmer que vous avez &eacute;t&eacute; autoris&eacute; par le canton &agrave; d&eacute;livrer ces certificats.</p>",
