--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -154,5 +154,5 @@
   "validation.error.http.459": "Il cognome non è valido!! Il cognome non può eccedere 80 caratteri e/o contenere caratteri non validi.",
   "notifications.unsupportedBrowser.title": "Browser non supportato",
   "notifications.unsupportedBrowser.message": "Il browser non è compatibile con alcune funzioni dell'applicazione. Tali funzioni sono supportate soltanto nelle due versioni più recenti di Chrome, Firefox, Edge e Safari.",
-  "gracePeriodMessage": "Questo prodotto di prova rapida può essere utilizzato fino a {{validUntil}}, dopo questa data non sarà possibile generare certificati con questo prodotto."
+  "gracePeriodMessage": "Questo prodotto per il test antigenico rapido può essere utilizzato fino al {{validUntil}}. Dopo tale data non è più possibile generare certificati COVID con questo prodotto."
 }
