--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -2,6 +2,8 @@
   "application.title": "Certificat COVID",
   "application.organization.name": "Office fédéral de l'informatique et de la télécommunication OFIT",
   "certificateCreate.link": "Établir un nouveau certificat",
+  "certificateCreate.form.label.exceptional.medicalAttestationValidFrom": "Date de l'attestation ou début de la validité",
+  "certificateCreate.form.label.exceptional.responsible": "Service responsable de l'établissement",
   "certificateCreate.form.label.personalData.firstName": "Prénom",
   "certificateCreate.form.label.personalData.surName": "Nom",
   "certificateCreate.form.label.personalData.birthdate": "Date de naissance",
@@ -46,15 +48,18 @@
   "certificateCreate.step-one.enum.test": "Test négatif",
   "certificateCreate.step-one.enum.recovery": "Guérison (PCR test positif)",
   "certificateCreate.step-one.enum.antibody": "Guérison (Test d'anticorps positif)",
+  "certificateCreate.step-one.enum.exceptional": "Certificat de dérogation",
   "certificateCreate.step-one.enum.vaccination-tourist": "Certificat de tourisme (vaccin de l'OMS)",
   "certificateCreate.step-one.enum.chOnly": "Certificats suisse",
   "certificateCreate.step-two.personaldata.information": "Les données personnelles doivent être identiques au document d'identité.",
   "certificateCreate.step-two.vaccinationinformation": "la vaccination n'est complète et le certificat n'est valide que si le nombre de doses reçues correspond au nombre de doses requises. Ex : guérison + vaccination : 1/1, vaccination avec deux doses : 2/2, rappel : 3/3.",
   "certificateCreate.step-two.entitledtoissueconfirmation": "<p style=\"text-align: justify;\">L'&eacute;tablissement des certificats de vaccination Covid ou des certificats de gu&eacute;rison Covid pour les personnes ayant &eacute;t&eacute; vaccin&eacute;es ou gu&eacute;rit &agrave; l'&eacute;tranger est r&eacute;serv&eacute; aux seuls bureaux sp&eacute;cifiquement d&eacute;sign&eacute;s par le canton. Veuillez confirmer que vous avez &eacute;t&eacute; autoris&eacute; par le canton &agrave; d&eacute;livrer ces certificats.</p>",
+  "certificateCreate.step-two.entitledtoissuemedicalattestationconfirmation": "<p style=\"text-align: justify;\">Je confirme être une personne habilitée par le canton à délivrer des certificats de dérogation COVID-19 sur la base d'une attestation médicale (en vertu de l'art. 21a de l'ordonnance COVID-19 certificats du 4 juin 2021, RS 818.102.2).</p><p style=\"text-align: justify;\">En outre, je consens que l'autorité cantonale compétente dispose d'une liste des certificats que j'ai délivrés afin de lutter contre les abus.</p>",
   "certificateCreate.step-two.nonissuablevaccineproductinformation": "<p style=\"text-align: justify;\">L'&eacute;mission des certificats pour vaccins qui figurent seulement sur la &laquo;<a href=\"https://www.who.int/teams/regulation-prequalification/eul\" target=\"_blank\">WHO Emergency Use Listing</a>&raquo; ne peuvent &ecirc;tre d&eacute;livr&eacute;s qu'aux personnes disposant d'un permis de s&eacute;jour valide ou aux citoyens suisses et ces certificats de vaccination Covid ne sont valables qu'en Suisse.</p>",
   "certificateCreate.step-two.moreInfosMessage": "<p style=\"text-align: justify;\">Pour l'instant, l'&eacute;mission pour les personnes vaccin&eacute;es ou gu&eacute;ries &agrave; l'&eacute;tranger est destin&eacute;e aux personnes pour lesquelles aucun certificat num&eacute;rique compatible avec le DCC de l'UE n'a pu &ecirc;tre d&eacute;livr&eacute; dans le pays de vaccination ou de gu&eacute;rison.</p><p style=\"text-align: justify;\">Les certificats de vaccination Covid pour les vaccins qui ne sont approuv&eacute;s ni en Suisse ni dans l'UE, mais qui figurent sur la &laquo;<a href=\"https://www.who.int/teams/regulation-prequalification/eul\" target=\"_blank\">WHO Emergency Use Listing</a>&raquo; ne peuvent &ecirc;tre d&eacute;livr&eacute;s qu'aux personnes disposant d'un permis de s&eacute;jour valide ou aux citoyens suisses et ces certificats de vaccination Covid ne sont valables qu'en Suisse.</p><p style=\"text-align: justify;\">Les bases l&eacute;gales correspondantes sont r&eacute;gies par l'ordonnance Covid 19 sur les certificats (<a href=\"https://www.fedlex.admin.ch/eli/cc/2021/325/fr\" target=\"_blank\">SR 818.102.2</a>), en particulier :</p><ul><li style=\"text-align: justify;\"><a href=\"https://www.fedlex.admin.ch/eli/cc/2021/325/fr#art_7\" target=\"_blank\">Article 7</a> : &Eacute;metteurs ayant des droits suppl&eacute;mentaires;</li><li style=\"text-align: justify;\"><a href=\"https://www.fedlex.admin.ch/eli/cc/2021/325/fr#art_13\" target=\"_blank\">Article 13</a> : Conditions de d&eacute;livrance.</li></ul> ",
   "certificateCreate.step-two.moreInfosLabel": "Plus d'informations",
   "certificateCreate.step-three.title": "Aperçu du certificat",
+  "certificateCreate.step-three.attestationCountry": "Attestation médicale délivrée en",
   "certificateCreate.step-three.description": "Merci de vérifier l'exactitude des données saisies avant la génération du certificat.",
   "certificateCreate.step-three.dose": "Dose",
   "certificateCreate.step-three.validFrom": "Valide depuis le",
