--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -129,6 +129,7 @@
   "i18n.validation.invalidShortDate": "Invalid date format. Please use \"jjjj\" or \"jjjj-mm\"",
   "i18n.validation.notIssuableInSwitzerland": "The selected vaccine is not authorised in Switzerland.",
   "i18n.validation.dateBeforeAntibodyCertificateMinDate": "Date of sample collection must not be before 16.11.2021.",
+  "i18n.validation.dateBeforeExceptionalCertificateMinDate": "Date must not be before 1.10.2021.",
   "logout": "Logout",
   "otp.button.copy": "Copy to the clipboard",
   "otp.button.create": "Generate private key",
