--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -52,7 +52,7 @@
     "certificateCreate.step-one.enum.vaccination-tourist": "Tourist certificate (WHO vaccine)",
     "certificateCreate.step-one.enum.chOnly": "Swiss certificates",
     "certificateCreate.step-two.personaldata.information": "The personal details must be identical to the identity document.",
-    "certificateCreate.step-two.vaccinationinformation": "<p><strong>Important:</strong><br />Information on the vaccine doses received (X) and required (Y) must be entered in accordance with one of the following rules:</p> <ul> <li>Last dose of a 2-dose vaccine (e.g. mRNA) without prior infection: <ul> <li>1/2: Incomplete vaccination (not usable for travel or areas subject to certification)</li> <li>2/2: Full vaccination (initial immunisation)</li> <li>3/3, 4/4, ...: Booster</li> </ul> </li> </ul> <ul> <li>Last dose of a 2-dose vaccine (e.g. mRNA) after prior infection (&ldquo;required doses&rdquo;): Y must always be 1): <ul> <li>1/1: Full vaccination after recovery</li> <li>2/1, 3/1, 4/1, ...: Booster after recovery</li> </ul> </li> </ul> <ul> <li>Last dose of a 1-dose vaccine (e.g. Janssen) without prior infection: <ul> <li>1/1: Full vaccination</li> <li>2/1: Booster</li> </ul> </li> </ul>",
+    "certificateCreate.step-two.vaccinationinformation": "<p><strong>Important:</strong><br />Information on the vaccine doses received (X) and required (Y) must be entered in accordance with one of the following rules:</p> <ul> <li>Last dose of a 2-dose vaccine (e.g. mRNA) without prior infection: <ul> <li>1/2: Incomplete vaccination (not usable for travel or areas subject to certification)</li> <li>2/2: Full vaccination (initial immunisation)</li> <li>3/3, 4/4, ...: Booster</li> </ul> </li> </ul> <ul> <li>Last dose of a 2-dose vaccine (e.g. mRNA) after prior infection (&ldquo;required doses&rdquo;: Y must always be 1): <ul> <li>1/1: Full vaccination after recovery</li> <li>2/1, 3/1, 4/1, ...: Booster after recovery</li> </ul> </li> </ul> <ul> <li>Last dose of a 1-dose vaccine (e.g. Janssen) without prior infection: <ul> <li>1/1: Full vaccination</li> <li>2/1: Booster</li> </ul> </li> </ul>",
     "certificateCreate.step-two.entitledtoissueconfirmation": "<p style=\"text-align: justify;\">The issuing of Covid vaccination certificates or Covid recovery certificates for persons who have been vaccinated or recovered abroad is reserved only for authorised issuers specifically designated by the canton. Please confirm that you have been authorised by the canton to issue these certificates.</p>",
     "certificateCreate.step-two.entitledtoissuemedicalattestationconfirmation": "<p style=\"text-align: justify;\">I confirm that I am an issuer appointed by the canton and that I am authorised to issue certificates of exemption on the basis of medical certificates (in accordance with Art. 21a of the COVID-19 Certificates Ordinance of 4 June 2021, SR 818.102.2).</p><p style=\"text-align: justify;\">I also agree that the responsible cantonal agencies will be provided with a list of the certificates issued by me, in order to combat abuse.</p>",
     "certificateCreate.step-two.nonissuablevaccineproductinformation": "<p style=\"text-align: justify;\">The issuance of vaccines that are only authorised according to the &laquo;<a href=\"https://www.who.int/teams/regulation-prequalification/eul\" target=\"_blank\">WHO Emergency Use Listing</a>&raquo; is permitted only for persons with a valid residence permit or Swiss citizens. These Covid vaccination certificates are also only valid within Switzerland.</p> ",
@@ -102,7 +102,7 @@
     "dashboard.upload.description": "Here you can generate multiple certificates.",
     "dashboard.upload.title": "Generate multiple certificates",
     "footer.built.prefix": "Developed with",
-    "footer.built.suffix": "",
+    "footer.built.suffix": "built",
     "footer.legal": "Terms and conditions",
     "footer.legal.url": "https://www.admin.ch/gov/en/start/terms-and-conditions.html",
     "home.administration": "Instructions for user administration (delegated management) by superuser",
@@ -116,8 +116,8 @@
     "home.support": "General support information",
     "home.title": "Hello",
     "home.training": "User training for COVID certificate",
-    "i18n.validation.required": "",
-    "i18n.validation.maxlength": "",
+    "i18n.validation.required": "Mandatory field",
+    "i18n.validation.maxlength": "Please enter a maximum of {{requiredLength}} characters",
     "i18n.validation.dosesTooBig": "Must be smaller or equal than required doses",
     "i18n.validation.dateTooSmall": "The date must be after 31.12.1899",
     "i18n.validation.dateBeforeBirthday": "The date must not be earlier than the date of birth.",
@@ -163,5 +163,6 @@
     "notifications.unsupportedBrowser.message": "Some functions of this application are not supported by your browser. Please note that only the two latest versions of Chrome, Firefox, Edge and Safari are supported",
     "gracePeriodMessage": "This rapid test product can be used until {{validUntil}}; after that date, it can no longer be used to generate certificates.",
     "i18n.validation.dosesNotValid": "The dose entries must comply with the rules above.",
-    "certificateCreate.step-one.enum.rapid": "Recovered (Rapid antigen test) TODO"
+    "certificateCreate.step-one.enum.recovery-rat": "Recovered (Rapid antigen test positive)",
+    "i18n.validation.rapidDateTooSmall": "Date of sample collection can't be before 24.01.2022."
 }
