--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -52,7 +52,7 @@
     "certificateCreate.step-one.enum.vaccination-tourist": "Certificato turistico (vaccino OMS)",
     "certificateCreate.step-one.enum.chOnly": "Certificati svizzeri",
     "certificateCreate.step-two.personaldata.information": "I dati personali devono essere identici al documento d'identità.",
-    "certificateCreate.step-two.vaccinationinformation": "<p><strong>Importante:<br /></strong>Le indicazioni sulle dosi di vaccino ricevute (X) e necessarie (Y) devono essere immesse secondo una delle seguenti regole:</p> <ul> <li>ultima dose di un vaccino a 2 dosi (p. es. a mRNA) senza infezione pregressa: <ul> <li>1/2: vaccinazione incompleta (non utilizzabile per viaggiare o per accedere a luoghi con obbligo del certificato)</li> <li>2/2: vaccinazione completa (immunizzazione di base)</li> <li>3/3, 4/4, ...: vaccinazione di richiamo (\"booster\")</li> </ul> </li> </ul> <ul> <li>ultima dose di un vaccino a 2 dosi (p. es. a mRNA) con infezione pregressa:<br />(\"dosi necessarie\": Y deve essere sempre 1): <ul> <li>1/1: vaccinazione completa dopo una guarigione</li> <li>2/1, 3/1, 4/1, ...: vaccinazione di richiamo (\"booster\") dopo una guarigione</li> </ul> </li> </ul> <ul> <li>ultima dose di un vaccino monodose (p. es. Janssen) senza infezione pregressa: <ul> <li>1/1: vaccinazione completa</li> <li>2/1: vaccinazione di richiamo (\"booster\")</li> </ul> </li> </ul>",
+    "certificateCreate.step-two.vaccinationinformation": "<p><strong>Importante:<br /></strong>Le indicazioni sulle dosi di vaccino ricevute (X) e necessarie (Y) devono essere immesse secondo una delle seguenti regole:</p> <ul> <li>ultima dose di un vaccino a 2 dosi (p. es. a mRNA) senza infezione pregressa: <ul> <li>1/2: vaccinazione incompleta (non utilizzabile per viaggiare o per accedere a luoghi con obbligo del certificato)</li> <li>2/2: vaccinazione completa (immunizzazione di base)</li> <li>3/3, 4/4, ...: vaccinazione di richiamo (\"booster\")</li> </ul> </li> </ul> <ul> <li>ultima dose di un vaccino a 2 dosi (p. es. a mRNA) con infezione pregressa (\"dosi necessarie\": Y deve essere sempre 1): <ul> <li>1/1: vaccinazione completa dopo una guarigione</li> <li>2/1, 3/1, 4/1, ...: vaccinazione di richiamo (\"booster\") dopo una guarigione</li> </ul> </li> </ul> <ul> <li>ultima dose di un vaccino monodose (p. es. Janssen) senza infezione pregressa: <ul> <li>1/1: vaccinazione completa</li> <li>2/1: vaccinazione di richiamo (\"booster\")</li> </ul> </li> </ul>",
     "certificateCreate.step-two.entitledtoissueconfirmation": "<p style=\"text-align: justify;\">L&rsquo;emissione di certificati di vaccinazione COVID-19 o di certificati di guarigione dalla COVID-19 per le persone vaccinate o guarite all&rsquo;estero &egrave; riservata soltanto ai servizi appositamente designati dal Cantone. Vogliate confermare di aver ottenuto l&rsquo;autorizzazione del Cantone per emettere questi certificati COVID-19.</p>",
     "certificateCreate.step-two.entitledtoissuemedicalattestationconfirmation": "<p style=\"text-align: justify;\">Confermo di essere un emittente designato dal Cantone e di essere autorizzato a emettere certificati di deroga sulla base di certificati medici (secondo l'art. 21a dell'ordinanza del 4 giugno 2021 sui certificati COVID-19, RS 818.102.2).</p><p style=\"text-align: justify;\">Inoltre, accetto che un elenco dei certificati da me emessi venga trasmesso al servizio competente del Cantone allo scopo di combattere gli abusi.</p>",
     "certificateCreate.step-two.nonissuablevaccineproductinformation": "<p style=\"text-align: justify;\">Per i vaccini autorizzati solo conformemente all &laquo;<a href=\"https://www.who.int/teams/regulation-prequalification/eul\" target=\"_blank\">WHO Emergency Use Listing</a>&raquo;, i certificati di vaccinazione COVID-19 vengono emessi soltanto per le persone con un permesso di soggiorno valido o per i cittadini svizzeri. Questi certificati di vaccinazione sono validi solo in Svizzera.</p>",
@@ -102,7 +102,7 @@
     "dashboard.upload.description": "Qui potete generare più certificati.",
     "dashboard.upload.title": "Generare più certificati",
     "footer.built.prefix": "Sviluppata con",
-    "footer.built.suffix": "",
+    "footer.built.suffix": "costruito",
     "footer.legal": "Nota legale",
     "footer.legal.url": "https://www.admin.ch/gov/it/pagina-iniziale/basi-legali.html",
     "home.administration": "Istruzioni per l'amministrazione degli utenti (gestione delegata) da parte del superutente",
@@ -116,8 +116,8 @@
     "home.support": "Informazioni generali di supporto",
     "home.title": "Benvenuti",
     "home.training": "Formazione degli utenti per Certificato Covid",
-    "i18n.validation.required": "",
-    "i18n.validation.maxlength": "",
+    "i18n.validation.required": "Campo obbligatorio",
+    "i18n.validation.maxlength": "Si prega di inserire un massimo di {{requiredLength}} caratteri",
     "i18n.validation.dosesTooBig": "Deve essere inferiore o uguale alle dosi necessarie",
     "i18n.validation.dateTooSmall": "La data deve essere successiva al 31.12.1899",
     "i18n.validation.dateBeforeBirthday": "La data non deve essere precedente alla data di nascita.",
@@ -163,5 +163,6 @@
     "notifications.unsupportedBrowser.message": "Il browser non è compatibile con alcune funzioni dell'applicazione. Tali funzioni sono supportate soltanto nelle due versioni più recenti di Chrome, Firefox, Edge e Safari.",
     "gracePeriodMessage": "Questo prodotto per il test antigenico rapido può essere utilizzato fino al {{validUntil}}. Dopo tale data non è più possibile generare certificati COVID con questo prodotto.",
     "i18n.validation.dosesNotValid": "L'indicazione della dose deve rispettare le regole di cui sopra.",
-    "certificateCreate.step-one.enum.rapid": "Guarigione (Test antigenico rapido positivo)"
+    "certificateCreate.step-one.enum.recovery-rat": "Guarigione (Test antigenico rapido positivo)",
+    "i18n.validation.rapidDateTooSmall": "La data del prelievo non può essere anteriore al 24.01.2022."
 }
