--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -13,6 +13,8 @@
     "certificateCreate.form.label.personalData.firstName": "Vorname",
     "certificateCreate.form.label.personalData.specialDate": "Spezielles Format",
     "certificateCreate.form.label.personalData.surName": "Nachname",
+    "certificateCreate.form.label.radio.nonRetroactive": "<strong>Es handelt sich <u>nicht</u> um eine nachträgliche Ausstellung</strong> eines Covid-19-Zertifikates. <strong>Ich bestätige hiermit, dass die originale Krankengeschichte bzw. Primärdokumentation bei mir vorliegt</strong> und ich dafür sorge, dass die eindeutige Zertifikatskennung und vorgelegten Angaben/Nachweise derart dokumentiert werden, dass die rechtmässige Ausstellung später jederzeit nachvollzogen werden kann. ",
+    "certificateCreate.form.label.radio.retroactive": "<strong>Es handelt sich um eine nachträgliche Ausstellung</strong> eines Covid-19-Zertifikats <strong>ohne originale Krankengeschichte bzw. Primärdokumentation.</strong> \nFür eine im Ausland erhaltene Impfung oder durchgemachte Erkrankung nur für Personen gem. Art. 7 Abs. 1 Bst. b der Verordnung Covid-Zertifikate (Aufenthaltsrecht in der Schweiz). <strong>Ich bestätige hiermit, dass ich vom Kanton für die Behandlung solcher Anträge speziell bezeichnet wurde</strong> (Art. 7 der Verordnung Covid-Zertifikate) und ich dafür sorge, dass die eindeutige Zertifikatskennung und vorgelegten Angaben/Nachweise derart dokumentiert werden, dass die rechtmässige Ausstellung später jederzeit nachvollzogen werden kann. \nDetails dazu siehe Art. 7 der Verordnung Covid-Zertifikate <a href=\"https://www.fedlex.admin.ch/eli/cc/2021/325/de#art_7\">(https://www.fedlex.admin.ch/eli/cc/2021/325/de#art_7)</a>.",
     "certificateCreate.form.label.recovery.countryOfTest": "Land der Testdurchführung",
     "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Datum des ersten positiven Resultats",
     "certificateCreate.form.label.shipping": "Versand Option",
@@ -83,6 +85,7 @@
     "certificateRevoke.title": "Zertifikat sperren",
     "certificateRevoke.uvci": "UVCI",
     "certificateRevoke.uvci.info": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
+    "certificateRevoke.warning": "<p>Ausstellerinnen und Aussteller sind verpflichtet die folgenden Angaben bei sich zu dokumentieren, falls sie ein Zertifikat widerrufen:</p><ul><li>Die eindeutige Zertifikatskennung (UVCI) des widerrufenen Zertifikats;</li><li>Angaben, welche die Nachvollziehbarkeit des Entscheides über den Widerruf ermöglichen.</li></ul>",
     "common.back": "Zurück",
     "common.important": "Wichtig",
     "common.language.de": "Deutsch",
@@ -121,6 +124,7 @@
     "home.support": "Allgemeine Supportangaben",
     "home.title": "Guten Tag",
     "home.training": "Anwenderschulung für Covid-Zertifikat",
+    "i18n.oblique.http.error.status.403": "Sie haben keine Zugriffsberechtigung für den Dienst auf diesem Server.",
     "i18n.validation.date": "Ein gültiges Datum wird benötigt",
     "i18n.validation.dateAfterToday": "Das Datum darf nicht in der Zukunft liegen",
     "i18n.validation.dateBeforeAntibodyCertificateMinDate": "Das Datum der Probenentnahme darf nicht vor dem 16.11.2021 liegen.",
