--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -13,6 +13,8 @@
     "certificateCreate.form.label.personalData.firstName": "Nome",
     "certificateCreate.form.label.personalData.specialDate": "Formato insolito",
     "certificateCreate.form.label.personalData.surName": "Cognome",
+    "certificateCreate.form.label.radio.nonRetroactive": "<strong><u>Non</u> si tratta di un’emissione successiva</strong> di un certificato COVID-19. <strong>Con la presente confermo che è disponibile la cartella clinica originale o la documentazione primaria</strong> e che provvedo affinché l’identificativo univoco e le informazioni/attestazioni fornite siano documentate in modo tale che in seguito si possa ricostruire in qualsiasi momento la legittimità dell’emissione.",
+    "certificateCreate.form.label.radio.retroactive": "<strong>Si tratta di un’emissione successiva</strong> di un certificato COVID-19 <strong>senza cartella clinica originale o documentazione primaria.</strong>\nPer una vaccinazione ricevuta all’estero o una guarigione avvenuta all’estero solo per le persone di cui all’articolo7 capoverso 1 lettera b dell’ordinanza sui certificati COVID-19 (con diritto di soggiorno in Svizzera). <strong>Con la presente confermo che sono stato appositamente designato dal Cantone per l’elaborazione di tali richieste</strong> (art. 7 ordinanza sui certificati COVID-19) e che provvedo affinché l’identificativo univoco e le informazioni/attestazioni fornite siano documentate in modo tale che in seguito si possa ricostruire in qualsiasi momento la legittimità dell’emissione.\nPer i dettagli si veda l’articolo 7 dell’ordinanza sui certificati COVID-19 <a href=”https://www.fedlex.admin.ch/eli/cc/2021/325/it#art_7”>(https://www.fedlex.admin.ch/eli/cc/2021/325/it#art_7)</a>.",
     "certificateCreate.form.label.recovery.countryOfTest": "Paese in cui è stato effettuato il test",
     "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Data del primo risultato positivo",
     "certificateCreate.form.label.shipping": "Opzione di spedizione",
@@ -122,6 +124,7 @@
     "home.support": "Informazioni generali di supporto",
     "home.title": "Benvenuti",
     "home.training": "Formazione degli utenti per Certificato Covid",
+    "i18n.oblique.http.error.status.403": "Non si hanno permessi necessari per accedere ai servizi sul server.",
     "i18n.validation.date": "È richiesta una data valida",
     "i18n.validation.dateAfterToday": "La data non deve essere nel futuro",
     "i18n.validation.dateBeforeAntibodyCertificateMinDate": "La data del prelievo non può essere anteriore al 16.11.2021.",
